# rust-optee-test

./: .gitignore  uuid.txt
host/: Cargo.toml  Makefile
host/src/: main.rs
proto/: Cargo.toml
proto/src/: lib.rs
ta/: Cargo.toml  build.rs
ta/src/: main.rs
ta/src/modular/: dragonfly_ffc.rs  gp_bigint.rs  mod.rs  test.rs  time.rs
